--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,23 @@
-plugins {
-    id 'java'
+allprojects {
+    apply plugin: 'java'
+    apply plugin: 'idea'
+
+    group 'com.github.lexshcherbinin'
+    version '1.0'
+
+    sourceCompatibility = 8
+
+    repositories {
+        mavenCentral()
+    }
 }
 
-group 'com.github.lexshcherbinin'
-version '1.0'
+subprojects {
+    dependencies {
+        implementation "com.google.guava:guava:${guavaVersion}"
+    }
 
-sourceCompatibility = 8
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    implementation "com.google.guava:guava:${guavaVersion}"
-}
-
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
+    tasks.withType(JavaCompile) {
+        options.encoding = 'UTF-8'
+    }
 }
