Подготовил тесты для проверок

--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,8 @@ subprojects {
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
     }
+
+    test {
+        useJUnitPlatform()
+    }
 }
