--- a/hw03-generic/build.gradle
+++ b/hw03-generic/build.gradle
@@ -1,24 +1,14 @@
 group 'com.github.lexshcherbinin.arraylist'
 version '1.0'
 
-sourceCompatibility = 8
-
-repositories {
-    mavenCentral()
-}
-
-jar {
-    manifest {
-        attributes('Main-Class': 'com.github.lexshcherbinin.hellootus.HelloOtus')
-    }
-
-    from {
-        configurations.runtimeClasspath.collect {
-            it.isDirectory() ? it : zipTree(it)
-        }
-    }
-}
+sourceCompatibility = JavaVersion.VERSION_15
 
 dependencies {
-    implementation "com.google.guava:guava:${guavaVersion}"
+    implementation "org.apache.commons:commons-lang3:${lang3Version}"
+
+    implementation "org.junit.jupiter:junit-jupiter-api:${jUpiterVersion}"
+    implementation "org.junit.jupiter:junit-jupiter-params:${jUpiterVersion}"
+    implementation "org.junit.jupiter:junit-jupiter-engine:${jUpiterVersion}"
+
+    implementation "org.assertj:assertj-core:${assertjVersion}"
 }
